Doc: report on fixing kibana / es problem (status)
relates to
https://github.com/openfoodfacts/openfoodfacts-monitoring/issues/55